--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>CA Deepesh Sawant - Chartered Accountant</title>
     <meta name="description" content="Professional Chartered Accountant services - Accounting, Tax, Audit, and Business Advisory" />
     <meta name="author" content="CA Deepesh Sawant" />
