--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="CA Deepesh Sawant - Chartered Accountant" />
     <meta name="twitter:description" content="Professional Chartered Accountant services - Accounting, Tax, Audit, and Business Advisory" />
+
+    <!-- Country flag icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@6.11.0/css/flag-icons.min.css" />
   </head>
 
   <body>
